--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center mb-3">
   <div class="card p-2">
     <div class="card-title d-flex justify-content-center align-items-center">
       <h5> Shopping Cart </h5>
