rewrite of logic and code

--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -3,8 +3,8 @@
       <div class="card text-center p-3 m-2">
         <h5> {{product.title}} </h5>
         <p> {{product.description}} </p>
-        <p> Price: ${{product.price}}</p>
-        <button class="btn btn-primary" (click)="addProductToCart(product)"> Add to cart </button>
+        <p> Price: ${{product.price}} </p>
+        <button class="btn btn-primary" (click)="addProductToShoppingCart(product)"> Add to cart </button>
       </div>
     </div>
 </div>
