--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-product></app-product>
-<app-cart></app-cart>
+<app-products></app-products>
+<app-shoppingCart></app-shoppingCart>
